--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,7 +1,20 @@
-<%= form_with(model: @account, local: true) do |f| %>
-  <div class="field">
-    <%= f.label :account_type %>
-    <%= f.text_area :account_type, class: 'form-control' %>
-  </div>
-  <%= f.submit 'New Account', class: 'btn btn-primary' %>
-<% end %>
+<div class="container">
+  <%= form_with(model: @account, local: true) do |f| %>
+    <% if @account.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@account.errors.count, "error") %> prohibited this @account from being saved:</h2>
+
+      <ul>
+      <% @account.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+    <% end %>
+    <div class="field">
+      <%= f.label :account_type %>
+      <%= f.select :account_type, ['Freelancer', 'Recruiter']%>
+    </div>
+    <%= f.submit 'New Account', class: 'btn btn-primary' %>
+  <% end %>
+</div>
