--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,2 +1,4 @@
-<h1>My Account</h1>
-<p><%= @account.account_type %></p>
+<div class="container">
+  <h1>My Account</h1>
+  <p><%= @account.account_type %></p>
+</div>
