--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron jumbotron-fluid flex-container">
   <div class="container">
-    <h1 class="display-2"><strong class="text-light">Creative Work. Made Easy.</strong></h1>
+    <h1><strong class="text-light">Creative Work. Made Easy.</strong></h1>
     <p class="lead text-light">Workforce and clients at the tip of your fingers.</p>
+    <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary rounded' %>
   </div>
 </div>
