--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,4 +1,8 @@
 <div class="container">
+  <div class="mb-3">
+    <strong><%= current_user.registration_status.reg_status %></strong>
+    <hr>
+  </div>
   <%= form_with(model: @account, local: true) do |f| %>
     <% if @account.errors.any? %>
     <div id="error_explanation">
