--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,20 @@
 
   <body>
     <% if flash[:notice] %>
-    <p class="notice"><%= notice %></p>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <p><%= notice %></p>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
     <% end %>
     <% if flash[:alert] %>
-    <p class="alert"><%= alert %></p>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <p><%= alert %></p>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
     <% end %>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <%= link_to root_path, class: 'navbar-brand logo' do %>
@@ -39,6 +49,11 @@
         </ul>
       </div>
     </nav>
+    <% unless controller_name == 'static' %>
+      <div class="section mb-5"></div>
+    <% end %>
+
     <%= yield %>
+
   </body>
 </html>
