--- a/app/views/recruiters/new.html.erb
+++ b/app/views/recruiters/new.html.erb
@@ -3,13 +3,13 @@
     <strong><%= current_user.registration_status.reg_status %></strong>
     <hr>
   </div>
-  <%= form_with(model: @freelancer, local: true) do |f| %>
-    <% if @freelancer.errors.any? %>
+  <%= form_with(model: @recruiter, local: true) do |f| %>
+    <% if @recruiter.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@freelancer.errors.count, "error") %> prohibited this @freelancer from being saved:</h2>
+      <h2><%= pluralize(@recruiter.errors.count, "error") %> prohibited this @recruiter from being saved:</h2>
 
       <ul>
-      <% @freelancer.errors.full_messages.each do |message| %>
+      <% @recruiter.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -24,21 +24,17 @@
       <%= f.text_field :last_name, class: 'form-control input' %>
     </div>
     <div class="field">
-      <%= f.label :skills %>
-      <%= f.text_field :skills, class: 'form-control input' %>
+      <%= f.label :company %>
+      <%= f.text_field :company, class: 'form-control input' %>
     </div>
     <div class="field">
-      <%= f.label :specialization %>
-      <%= f.text_field :specialization, class: 'form-control input' %>
-    </div>
-    <div class="field">
-      <%= f.label :description %>
-      <%= f.text_field :description, class: 'form-control input' %>
+      <%= f.label :company_description %>
+      <%= f.text_field :company_description, class: 'form-control input' %>
     </div>
     <div class="field">
       <%= f.label :resume %>
       <%= f.text_area :resume, class: 'form-control input mb-4' %>
     </div>
-    <%= f.submit 'Create this Freelancer', class: 'btn btn-primary' %>
+    <%= f.submit 'Create this Recruiter', class: 'btn btn-primary' %>
   <% end %>
 </div>
