--- a/app/views/freelancers/new.html.erb
+++ b/app/views/freelancers/new.html.erb
@@ -5,14 +5,16 @@
   </div>
   <%= form_with(model: @freelancer, local: true) do |f| %>
     <% if @freelancer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@freelancer.errors.count, "error") %> prohibited this @freelancer from being saved:</h2>
+    <div class="alert alert-danger">
+      <div id="error_explanation">
+        <h2><%= pluralize(@freelancer.errors.count, "error") %> prohibited this freelancer profile from being saved:</h2>
 
-      <ul>
-      <% @freelancer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @freelancer.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
     <% end %>
     <div class="field">
