--- a/app/views/panels/show.html.erb
+++ b/app/views/panels/show.html.erb
@@ -39,6 +39,7 @@
     <strong><p>Specialization</p></strong>
     <p><%= @user.recruiter.resume %></p>
     <hr>
+    <%= link_to 'New Job', new_job_path, class: 'btn btn-success mb-5' %>
   <% end %>
 
 </div>
