--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -17,6 +17,10 @@
     <%= f.text_area :job_title, class: 'form-control' %>
   </div>
   <div class="form-group">
+    <%= f.label :position %>
+    <%= f.text_field :position, class: 'form-control' %>
+  </div>
+  <div class="form-group">
     <%= f.label :job_description %>
     <%= f.text_field :job_description, class: 'form-control' %>
   </div>
