--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -6,7 +6,7 @@
 
   <div class="card mb-5">
     <div class="card-body">
-      <h5 class="card-title"><%= @job.job_title %></h5>
+      <h5 class="card-title"><strong class="mr-1"><%= @job.job_title %></strong> Status: <strong><%= @job.job_status.current_job_status %></strong></h5>
       <hr>
       <h6 class="card-subtitle text-muted mb-2"><%= @job.job_description %></h6>
       <p class="card-text"><%= @job.job_skills %></p>
@@ -19,15 +19,28 @@
       <% end %>
     </div>
   </div>
-  <% if @account.freelancer %>
+  <% if @account.freelancer && @job.job_status_id == 1 %>
     <% if !@this_job_request %>
-    <%= form_for([@job, @job.requests.build], local: true) do |f| %>
-      <div class="form-field">
-        <%= f.label :request_description %>
-        <%= f.text_area :request_description, class: 'form-control mb-2', style: 'height: 200px;' %>
-      </div>
-      <%= f.submit 'Make Proposal', class: 'btn btn-primary rounded mb-5' %>
+      <%= form_for([@job, @job.requests.build], local: true) do |f| %>
+        <div class="form-field">
+          <%= f.label :request_description %>
+          <%= f.text_area :request_description, class: 'form-control mb-2', style: 'height: 200px;' %>
+        </div>
+        <%= f.submit 'Make Proposal', class: 'btn btn-primary rounded mb-5' %>
+      <% end %>
     <% end %>
+    <% if @this_job_request %>
+      <p>You request for this position is <strong><%= @this_job_request.request_status.req_status %></strong>.</p>
     <% end %>
   <% end %>
+
+  <% if @user.is_recruiter? %>
+    <% if @job.recruiter_id == @recruiter.id %>
+      <p>This is a position you've created!</p>
+      <%= link_to 'Go to Job Panel', @job_panel, class: 'btn btn-success' %>
+    <% end %>
+  <% end %>
+
+  <%= link_to 'Job Forum', job_job_room_path(@job_room), class: 'btn btn-primary' %>
+
 </div>
