--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,10 @@
             <li class="nav-item"><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %></li>
           <% end %>
           <% if user_signed_in? %>
+            <li class="nav-item"><%= link_to 'My Jobs', my_jobs_index_path, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'Edit Account', edit_user_registration_path, class: 'nav-link' %></li>
-            
+
             <!-- <li class="nav-item"><%#= link_to 'Panel', panel_path(@panel), class: 'nav-link' %></li> -->
           <% end %>
           <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
